# rust-patterns

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
__doc__/: async_rust_flow.avif
src/: lib.rs  main.rs
src/algorithms/: mod.rs
src/algorithms/graph/: bellman_ford.rs  bfs.rs  cycle_detection.rs  dfs.rs  dijkstras.rs  dinic.rs  fibo_heap.rs  floyd_warshall.rs  graph.rs  graph_core.rs  mod.rs  morris_traversal.rs  prims.rs  top_sort.rs  union_find.rs
src/algorithms/string/: longest_palindrome.rs  mod.rs  permutations.rs  sliding_window.rs  windowing.rs
src/patterns/: adapter.rs  builder.rs  composite.rs  cqrs.rs  facade.rs  factory.rs  flyweight.rs  iterator.rs  leader_election.rs  license.rs  mod.rs  parsers.rs  pubsub.rs  service_registry_discovery.rs  singleton.rs  state.rs  state_encoding_into_type_system.rs  strategy.rs
src/patterns/behavioural/: mod.rs  strategy.rs  template_method.rs  visitor.rs
src/patterns/creational/: builder.rs  factory.rs  singleton.rs
src/patterns/structural/: adapter.rs  composite.rs  flyweight.rs  mod.rs
src/patterns/system_design/: cqrs.rs  leader_election.rs  mod.rs  pubsub.rs  service_registry_discovery.rs  sidecar.rs  state.rs  state_encoding_into_type_system.rs
src/playbook/: async_pattern.rs  borrow_checker_quirks.rs  const_type_expressions.rs  mod.rs  phantom_data_covariance.rs  pinning.rs  poly.rs  raw_pointers.rs  smart_pointers.rs  stream.rs  strtok.rs  strtok_example.rs  take.rs  unsafe_ways.rs  vector_calc_simd_vs_chunk.rs
src/playbook/algorithms/graph/: dfs.rs
