[package]
name = "rust-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
cargo-watch = "8.4.0"
futures = "0.3.28"
hyper = "0.14.26"
lazy_static = "1.4.0"
num = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }


[features]
expensive_tests = []
